--- a/AppliWeb.yml
+++ b/AppliWeb.yml
@@ -1,23 +1,20 @@
 ---
 
-- hosts: localhost
+- hosts: test
   become: yes
-  #become_method: su
+  become_method: su
   tasks:
     - name: Configure Apache
-      copy:
-        src: /home/momo/index.html
-        dest: /srv/www/htdocs
+      shell: " cp  /home/omis/index.html  /var/www/html/ "
       register: ConfApache
-      notify: Restart Apache
+      #notify: Restart Apache
 
     - debug:
         msg: "{{ ConfApache }}"
 
-  handlers:
-    - name: Restart Apache
-      shell: rcapache2 restart
-      
+  #handlers:
+   # - name: Restart Apache
+     # shell: rcapache2 restart
         
 
 
